--- a/report/report.tex
+++ b/report/report.tex
@@ -18,49 +18,49 @@
     bottom=20mm,
 }
 
+% Set the figure counter to reset within subsections
+\counterwithin{figure}{subsection}
+
 % Document
 \begin{document}
 
 % Title Page
-\title{Your Title Here}
-\author{Your Name}
+\title{Homework 1: Vector Search}
+\author{Naomi Derel 325324994, Gili Cohen 326280815, Renana Shachak}
 \date{\today}
 \maketitle
 
-% Abstract
-\begin{abstract}
-    This is the abstract. It gives a brief overview of the document.
-\end{abstract}
-
-% Table of Contents
-\tableofcontents
-\newpage
+% % Table of Contents
+% \tableofcontents
+% \newpage
 
 % Sections
-\section{Introduction}
-This is the introduction. Here you introduce your topic and give an overview of the document.
+\section{Faiss}
 
-\section{Background}
-In this section, provide background information relevant to your topic.
+\subsection{Running Times}
 
-\section{Methodology}
-Describe the methods and procedures used in your research or project.
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=0.5\textwidth]{images/1_1_1.png}
+    \caption{Running times by Number of Index Vectors}
+\end{figure}
 
-\section{Results}
-Present the results of your research or project here.
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=0.5\textwidth]{images/1_1_2.png}
+    \caption{Running times by Dimentionality}
+\end{figure}
 
-\section{Discussion}
-Discuss the implications of your results and how they relate to your hypothesis or research questions.
+\subsection{Faiss LSH}
 
-\section{Conclusion}
-Summarize your findings and suggest future research directions.
 
-% Bibliography
-\newpage
-\begin{thebibliography}{99}
-    \bibitem{ref1} Author, \emph{Title}, Publisher, Year.
-    \bibitem{ref2} Author, \emph{Title}, Publisher, Year.
-    % Add more references as needed
-\end{thebibliography}
+
+% % Bibliography
+% \newpage
+% \begin{thebibliography}{99}
+%     \bibitem{ref1} Author, \emph{Title}, Publisher, Year.
+%     \bibitem{ref2} Author, \emph{Title}, Publisher, Year.
+%     % Add more references as needed
+% \end{thebibliography}
 
 \end{document}
