--- a/Part 2.ipynb
+++ b/Part 2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "initial_id",
    "metadata": {
     "ExecuteTime": {
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "5a991f1eb012a476",
    "metadata": {
     "ExecuteTime": {
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "a8ef475c717fbe2e",
    "metadata": {
     "ExecuteTime": {
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "1df7a2d698755a82",
    "metadata": {
     "ExecuteTime": {
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "af14bea64023a3d4",
    "metadata": {
     "ExecuteTime": {
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "b4b0932dfa7d7a4c",
    "metadata": {
     "ExecuteTime": {
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "b4fdbd7671405821",
    "metadata": {
     "ExecuteTime": {
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "65ff74d429524ffc",
    "metadata": {
     "ExecuteTime": {
@@ -221,15 +221,24 @@
      "start_time": "2024-06-10T21:18:41.017409Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Exhaustive search took 4.14 seconds.\n"
+     ]
+    }
+   ],
    "source": [
-    "%%time\n",
-    "gt_nn = semi_optimized_exhaustive_search(index_vectors, query_vectors, k)"
+    "start = time()\n",
+    "gt_nn = semi_optimized_exhaustive_search(index_vectors, query_vectors, k)\n",
+    "print(f\"Exhaustive search took {time() - start:.2f} seconds.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "bd448cbdb96b1ba0",
    "metadata": {
     "ExecuteTime": {
@@ -237,15 +246,24 @@
      "start_time": "2024-06-10T21:18:35.998251Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Building the LSH index took 0.62 seconds.\n"
+     ]
+    }
+   ],
    "source": [
-    "%%time\n",
-    "faiss_lsh_index = build_faiss_lsh_index(index_vectors, dim, nbits=2000)"
+    "start = time()\n",
+    "faiss_lsh_index = build_faiss_lsh_index(index_vectors, dim, nbits=2000)\n",
+    "print(f\"Building the LSH index took {time() - start:.2f} seconds.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "b0a321e6b7406267",
    "metadata": {
     "ExecuteTime": {
@@ -253,15 +271,24 @@
      "start_time": "2024-06-10T21:18:32.385337Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LSH search over query vectors took 0.13 seconds.\n"
+     ]
+    }
+   ],
    "source": [
-    "%%time\n",
-    "faiss_lsh_ann = faiss_search(query_vectors, faiss_lsh_index, k)"
+    "start = time()\n",
+    "faiss_lsh_ann = faiss_search(query_vectors, faiss_lsh_index, k)\n",
+    "print(f\"LSH search over query vectors took {time() - start:.2f} seconds.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "e5554595c4d77a27",
    "metadata": {
     "ExecuteTime": {
@@ -269,7 +296,15 @@
      "start_time": "2024-06-10T21:18:26.233820Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "recall@10 for faiss_lsh_index: 0.138\n"
+     ]
+    }
+   ],
    "source": [
     "print(f\"recall@10 for faiss_lsh_index: {compute_recall_at_k(gt_nn, faiss_lsh_ann, k)}\")"
    ]
@@ -422,7 +457,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
