--- a/report/report.tex
+++ b/report/report.tex
@@ -27,7 +27,7 @@
 % Title Page
 \title{Homework 1: Vector Search}
 \author{Naomi Derel 325324994, Gili Cohen 326280815, Renana Shachak}
-\date{\today}
+\date{02.07.2024}
 \maketitle
 
 % % Table of Contents
@@ -52,6 +52,20 @@
 \end{figure}
 
 \subsection{Faiss LSH}
+
+\section{Implementing an Index}
+
+\subsection{LSH vs. Native Exhaustive Search}
+
+\begin{enumerate}
+    \item Running time of the \texttt{semi optimized exhaustive search} function was: \textbf{4.14 seconds}.
+    \item Running time of building the LSH index was: \textbf{0.62 seconds}.
+    \item Running time of LSH search over query vectors was: \textbf{0.13 seconds}.
+    \item $Recall@10$ for the LSH index was: \textbf{0.138}.
+\end{enumerate}
+
+\subsection{Custom Indexing Algorithm}
+
 
 
 
