--- a/Part 2.ipynb
+++ b/Part 2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "initial_id",
    "metadata": {
     "ExecuteTime": {
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "5a991f1eb012a476",
    "metadata": {
     "ExecuteTime": {
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "a8ef475c717fbe2e",
    "metadata": {
     "ExecuteTime": {
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "1df7a2d698755a82",
    "metadata": {
     "ExecuteTime": {
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "af14bea64023a3d4",
    "metadata": {
     "ExecuteTime": {
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "b4b0932dfa7d7a4c",
    "metadata": {
     "ExecuteTime": {
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "b4fdbd7671405821",
    "metadata": {
     "ExecuteTime": {
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "65ff74d429524ffc",
    "metadata": {
     "ExecuteTime": {
@@ -226,7 +226,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Exhaustive search took 4.14 seconds.\n"
+      "Exhaustive search took 4.06 seconds.\n"
      ]
     }
    ],
@@ -310,6 +310,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "b22f6803",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HNSW search over query vectors took 0.01 seconds.\n",
+      "recall@10 for faiss_hnsw_index: 0.859\n"
+     ]
+    }
+   ],
+   "source": [
+    "index_hnsw = faiss.IndexHNSWFlat(dim, 32)\n",
+    "index_hnsw.add(index_vectors)\n",
+    "\n",
+    "start = time()\n",
+    "faiss_hnsw_ann = faiss_search(query_vectors, index_hnsw, k)\n",
+    "print(f\"HNSW search over query vectors took {time() - start:.2f} seconds.\")\n",
+    "\n",
+    "print(f\"recall@10 for faiss_hnsw_index: {compute_recall_at_k(gt_nn, faiss_hnsw_ann, k)}\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "ad5ca983b3a893e5",
    "metadata": {},
@@ -334,6 +360,46 @@
     "    index_vectors = np.load('data/index_vectors3.npy')\n",
     "    \n",
     "the aforementioned requirements should also be satisfied over these two query-index sets. No need to insert the results over these two to the report."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "dccc52a8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query_vectors2 = np.load('data/query_vectors2.npy')\n",
+    "index_vectors2 = np.load('data/index_vectors2.npy')\n",
+    "\n",
+    "query_vectors3 = np.load('data/query_vectors3.npy')\n",
+    "index_vectors3 = np.load('data/index_vectors3.npy')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "463bc5f7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from heapq import heappush, heappop\n",
+    "from collections import defaultdict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b1e0270f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class HNSWNode:\n",
+    "    def __init__(self, vector, level):\n",
+    "        self.vector = vector\n",
+    "        self.level = level\n",
+    "        self.neighbors = defaultdict(list)"
    ]
   },
   {
