not working part 2

--- a/Part 2.ipynb
+++ b/Part 2.ipynb
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "b4fdbd7671405821",
    "metadata": {
     "ExecuteTime": {
@@ -377,8 +377,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3cc86afc",
+   "metadata": {},
+   "source": [
+    "### Answers:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "463bc5f7",
    "metadata": {},
    "outputs": [],
@@ -390,16 +398,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "b1e0270f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "class HNSWNode:\n",
+    "class HNSW_Node:\n",
     "    def __init__(self, vector, level):\n",
     "        self.vector = vector\n",
     "        self.level = level\n",
     "        self.neighbors = defaultdict(list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "d70a537a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class HNSW_Index:\n",
+    "    def __init__(self, dimension, max_level, num_neigh):\n",
+    "        self.dimension = dimension\n",
+    "        self.max_level = max_level\n",
+    "        self.num_neigh = num_neigh\n",
+    "        self.nodes = []\n",
+    "        self.start_node = None\n",
+    "\n",
+    "    def distance(self, v1, v2):\n",
+    "        return np.linalg.norm(v1 - v2) # Euclidean distance\n",
+    "\n",
+    "    def search_layer(self, query, entry_point, level, entry_factor):\n",
+    "        visited = set()\n",
+    "        candidates = []\n",
+    "        best_candidates = []\n",
+    "\n",
+    "        # init heap with (entry point, dist to query):\n",
+    "        heappush(candidates, (self.distance(query, entry_point.vector), entry_point))\n",
+    "        \n",
+    "        while candidates:\n",
+    "            dist, current_node = heappop(candidates)\n",
+    "            if current_node in visited:\n",
+    "                continue\n",
+    "            visited.add(current_node)\n",
+    "\n",
+    "            if len(best_candidates) < entry_factor or dist < best_candidates[0][0]:\n",
+    "                heappush(best_candidates, (-dist, current_node))\n",
+    "\n",
+    "                # keep the best_candidates list of size entry_factor:\n",
+    "                if len(best_candidates) > entry_factor:\n",
+    "                    heappop(best_candidates)\n",
+    "\n",
+    "                for neighbor in current_node.neighbors[level]:\n",
+    "                    if neighbor not in visited:\n",
+    "                        heappush(candidates, (self.distance(query, neighbor.vector), neighbor))\n",
+    "\n",
+    "        return [node for _, node in best_candidates]\n",
+    "\n",
+    "    def add(self, vector):\n",
+    "        new_node = HNSW_Node(vector, np.random.randint(0, self.max_level))\n",
+    "        if not self.nodes:\n",
+    "            self.entry_point = new_node\n",
+    "            self.nodes.append(new_node)\n",
+    "            return\n",
+    "\n",
+    "        entry_point = self.entry_point\n",
+    "        for level in range(self.max_level, new_node.level, -1):\n",
+    "            entry_point = min(entry_point.neighbors[level], key=lambda n: self.distance(vector, n.vector))\n",
+    "\n",
+    "        for level in range(min(new_node.level, self.max_level)):\n",
+    "            candidates = self.search_layer(vector, entry_point, level, self.ef_construction)\n",
+    "            for candidate in candidates:\n",
+    "                candidate.neighbors[level].append(new_node)\n",
+    "                new_node.neighbors[level].append(candidate)\n",
+    "\n",
+    "        self.nodes.append(new_node)\n",
+    "        if new_node.level > self.entry_point.level:\n",
+    "            self.entry_point = new_node\n",
+    "\n",
+    "    def search(self, query, k):\n",
+    "        entry_factor = max(k, self.ef_construction)\n",
+    "        entry_point = self.entry_point\n",
+    "\n",
+    "        for level in range(self.max_level, 0, -1):\n",
+    "            entry_point = min(entry_point.neighbors[level], key=lambda n: self.distance(query, n.vector))\n",
+    "\n",
+    "        candidates = self.search_layer(query, entry_point, 0, entry_factor)\n",
+    "        return sorted(candidates, key=lambda n: self.distance(query, n.vector))[:k]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "6ed0d20b",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "min() iterable argument is empty",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[16], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m# Add index vectors to the graph\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m vector \u001b[38;5;129;01min\u001b[39;00m index_vectors:\n\u001b[0;32m----> 5\u001b[0m     \u001b[43mhnsw\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43madd\u001b[49m\u001b[43m(\u001b[49m\u001b[43mvector\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;66;03m# Search for the nearest neighbors of the query vectors\u001b[39;00m\n\u001b[1;32m      8\u001b[0m ann \u001b[38;5;241m=\u001b[39m []\n",
+      "Cell \u001b[0;32mIn[15], line 48\u001b[0m, in \u001b[0;36mHNSW_Index.add\u001b[0;34m(self, vector)\u001b[0m\n\u001b[1;32m     46\u001b[0m entry_point \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mentry_point\n\u001b[1;32m     47\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m level \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmax_level, new_node\u001b[38;5;241m.\u001b[39mlevel, \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m):\n\u001b[0;32m---> 48\u001b[0m     entry_point \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mmin\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mentry_point\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mneighbors\u001b[49m\u001b[43m[\u001b[49m\u001b[43mlevel\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mkey\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mlambda\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mn\u001b[49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdistance\u001b[49m\u001b[43m(\u001b[49m\u001b[43mvector\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mn\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mvector\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     50\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m level \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mmin\u001b[39m(new_node\u001b[38;5;241m.\u001b[39mlevel, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmax_level)):\n\u001b[1;32m     51\u001b[0m     candidates \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msearch_layer(vector, entry_point, level, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mef_construction)\n",
+      "\u001b[0;31mValueError\u001b[0m: min() iterable argument is empty"
+     ]
+    }
+   ],
+   "source": [
+    "hnsw = HNSW_Index(dimension=128, max_level=16, num_neigh=200)\n",
+    "\n",
+    "# Add index vectors to the graph\n",
+    "for vector in index_vectors:\n",
+    "    hnsw.add(vector)\n",
+    "\n",
+    "# Search for the nearest neighbors of the query vectors\n",
+    "ann = []\n",
+    "for query in query_vectors:\n",
+    "    ann.append([node.vector for node in hnsw.search(query, k)])\n",
+    "\n",
+    "print(f\"recall@10 for hnsw_index: {compute_recall_at_k(gt_nn, np.array(ann), k)}\")"
    ]
   },
   {
