--- a/Part 2.ipynb
+++ b/Part 2.ipynb
@@ -455,7 +455,7 @@
     "\n",
     "        return [node for _, node in best_candidates]\n",
     "\n",
-    "    def add(self, vector):\n",
+    "    def add_single(self, vector):\n",
     "        new_node = HNSW_Node(vector, np.random.randint(0, self.max_level))\n",
     "        if not self.nodes:\n",
     "            self.entry_point = new_node\n",
@@ -475,6 +475,10 @@
     "        self.nodes.append(new_node)\n",
     "        if new_node.level > self.entry_point.level:\n",
     "            self.entry_point = new_node\n",
+    "\n",
+    "    def add(self, vectors):\n",
+    "        for vector in vectors:\n",
+    "            self.add_single(vector)\n",
     "\n",
     "    def search(self, query, k):\n",
     "        entry_factor = max(k, self.ef_construction)\n",
@@ -510,8 +514,7 @@
     "hnsw = HNSW_Index(dimension=128, max_level=16, num_neigh=200)\n",
     "\n",
     "# Add index vectors to the graph\n",
-    "for vector in index_vectors:\n",
-    "    hnsw.add(vector)\n",
+    "hnsw.add(index_vectors)\n",
     "\n",
     "# Search for the nearest neighbors of the query vectors\n",
     "ann = []\n",
