Add note about keeping original answers for Faiss section

--- a/Part 2.ipynb
+++ b/Part 2.ipynb
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "d70a537a",
    "metadata": {},
    "outputs": [],
@@ -428,7 +428,37 @@
     "    def distance(self, v1, v2):\n",
     "        return np.linalg.norm(v1 - v2) # Euclidean distance\n",
     "\n",
+    "    def add_single(self, vector):\n",
+    "        new_node = HNSW_Node(vector, np.random.randint(0, self.max_level)) # random level for the new node\n",
+    "\n",
+    "        if not self.nodes: # if the index is empty\n",
+    "            self.entry_point = new_node\n",
+    "            self.nodes.append(new_node)\n",
+    "        \n",
+    "        else:\n",
+    "            entry_point = self.entry_point\n",
+    "            for level in range(self.max_level, new_node.level, -1): # from highest to node level\n",
+    "                print(entry_point.neighbors[level])\n",
+    "                entry_point = min(entry_point.neighbors[level], key=lambda n: self.distance(vector, n.vector))\n",
+    "\n",
+    "            for level in range(min(new_node.level, self.max_level)):\n",
+    "                candidates = self.search_layer(vector, entry_point, level, self.num_neigh)\n",
+    "                for candidate in candidates:\n",
+    "                    candidate.neighbors[level].append(new_node)\n",
+    "                    new_node.neighbors[level].append(candidate)\n",
+    "\n",
+    "            self.nodes.append(new_node)\n",
+    "            if new_node.level > self.entry_point.level:\n",
+    "                self.entry_point = new_node\n",
+    "\n",
+    "    def add(self, vectors):\n",
+    "        for vector in vectors:\n",
+    "            self.add_single(vector)\n",
+    "\n",
     "    def search_layer(self, query, entry_point, level, entry_factor):\n",
+    "        \"\"\" \n",
+    "        Search for the nearest neighbors in the specified layer using the entry_point as the starting node.\n",
+    "        \"\"\"\n",
     "        visited = set()\n",
     "        candidates = []\n",
     "        best_candidates = []\n",
@@ -455,31 +485,6 @@
     "\n",
     "        return [node for _, node in best_candidates]\n",
     "\n",
-    "    def add_single(self, vector):\n",
-    "        new_node = HNSW_Node(vector, np.random.randint(0, self.max_level))\n",
-    "        if not self.nodes:\n",
-    "            self.entry_point = new_node\n",
-    "            self.nodes.append(new_node)\n",
-    "            return\n",
-    "\n",
-    "        entry_point = self.entry_point\n",
-    "        for level in range(self.max_level, new_node.level, -1):\n",
-    "            entry_point = min(entry_point.neighbors[level], key=lambda n: self.distance(vector, n.vector))\n",
-    "\n",
-    "        for level in range(min(new_node.level, self.max_level)):\n",
-    "            candidates = self.search_layer(vector, entry_point, level, self.ef_construction)\n",
-    "            for candidate in candidates:\n",
-    "                candidate.neighbors[level].append(new_node)\n",
-    "                new_node.neighbors[level].append(candidate)\n",
-    "\n",
-    "        self.nodes.append(new_node)\n",
-    "        if new_node.level > self.entry_point.level:\n",
-    "            self.entry_point = new_node\n",
-    "\n",
-    "    def add(self, vectors):\n",
-    "        for vector in vectors:\n",
-    "            self.add_single(vector)\n",
-    "\n",
     "    def search(self, query, k):\n",
     "        entry_factor = max(k, self.ef_construction)\n",
     "        entry_point = self.entry_point\n",
@@ -493,10 +498,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "id": "6ed0d20b",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    },
     {
      "ename": "ValueError",
      "evalue": "min() iterable argument is empty",
@@ -504,8 +516,9 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[16], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m# Add index vectors to the graph\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m vector \u001b[38;5;129;01min\u001b[39;00m index_vectors:\n\u001b[0;32m----> 5\u001b[0m     \u001b[43mhnsw\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43madd\u001b[49m\u001b[43m(\u001b[49m\u001b[43mvector\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;66;03m# Search for the nearest neighbors of the query vectors\u001b[39;00m\n\u001b[1;32m      8\u001b[0m ann \u001b[38;5;241m=\u001b[39m []\n",
-      "Cell \u001b[0;32mIn[15], line 48\u001b[0m, in \u001b[0;36mHNSW_Index.add\u001b[0;34m(self, vector)\u001b[0m\n\u001b[1;32m     46\u001b[0m entry_point \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mentry_point\n\u001b[1;32m     47\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m level \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmax_level, new_node\u001b[38;5;241m.\u001b[39mlevel, \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m):\n\u001b[0;32m---> 48\u001b[0m     entry_point \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mmin\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mentry_point\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mneighbors\u001b[49m\u001b[43m[\u001b[49m\u001b[43mlevel\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mkey\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mlambda\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mn\u001b[49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdistance\u001b[49m\u001b[43m(\u001b[49m\u001b[43mvector\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mn\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mvector\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     50\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m level \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mmin\u001b[39m(new_node\u001b[38;5;241m.\u001b[39mlevel, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmax_level)):\n\u001b[1;32m     51\u001b[0m     candidates \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msearch_layer(vector, entry_point, level, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mef_construction)\n",
+      "Cell \u001b[0;32mIn[19], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m hnsw \u001b[38;5;241m=\u001b[39m HNSW_Index(dimension\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m128\u001b[39m, max_level\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m16\u001b[39m, num_neigh\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m200\u001b[39m)\n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m# Add index vectors to the graph\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m \u001b[43mhnsw\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43madd\u001b[49m\u001b[43m(\u001b[49m\u001b[43mindex_vectors\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[17], line 38\u001b[0m, in \u001b[0;36mHNSW_Index.add\u001b[0;34m(self, vectors)\u001b[0m\n\u001b[1;32m     36\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21madd\u001b[39m(\u001b[38;5;28mself\u001b[39m, vectors):\n\u001b[1;32m     37\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m vector \u001b[38;5;129;01min\u001b[39;00m vectors:\n\u001b[0;32m---> 38\u001b[0m         \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43madd_single\u001b[49m\u001b[43m(\u001b[49m\u001b[43mvector\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[17], line 23\u001b[0m, in \u001b[0;36mHNSW_Index.add_single\u001b[0;34m(self, vector)\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m level \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmax_level, new_node\u001b[38;5;241m.\u001b[39mlevel, \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m): \u001b[38;5;66;03m# from highest to node level\u001b[39;00m\n\u001b[1;32m     22\u001b[0m     \u001b[38;5;28mprint\u001b[39m(entry_point\u001b[38;5;241m.\u001b[39mneighbors[level])\n\u001b[0;32m---> 23\u001b[0m     entry_point \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mmin\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mentry_point\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mneighbors\u001b[49m\u001b[43m[\u001b[49m\u001b[43mlevel\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mkey\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mlambda\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mn\u001b[49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdistance\u001b[49m\u001b[43m(\u001b[49m\u001b[43mvector\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mn\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mvector\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     25\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m level \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mmin\u001b[39m(new_node\u001b[38;5;241m.\u001b[39mlevel, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmax_level)):\n\u001b[1;32m     26\u001b[0m     candidates \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msearch_layer(vector, entry_point, level, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mnum_neigh)\n",
       "\u001b[0;31mValueError\u001b[0m: min() iterable argument is empty"
      ]
     }
@@ -515,7 +528,16 @@
     "\n",
     "# Add index vectors to the graph\n",
     "hnsw.add(index_vectors)\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b8d39ceb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Search for the nearest neighbors of the query vectors\n",
     "ann = []\n",
     "for query in query_vectors:\n",
