--- a/report/report.tex
+++ b/report/report.tex
@@ -38,6 +38,8 @@
 % Sections
 \section{Faiss}
 
+With permission from the course staff, we kept our answers for the original question and not the updated requirements as we finished it prior to the update.
+
 \subsection{Running Times}
 
 \begin{figure}[H]
