--- a/Part 2.ipynb
+++ b/Part 2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "initial_id",
    "metadata": {
     "ExecuteTime": {
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "5a991f1eb012a476",
    "metadata": {
     "ExecuteTime": {
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "a8ef475c717fbe2e",
    "metadata": {
     "ExecuteTime": {
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "1df7a2d698755a82",
    "metadata": {
     "ExecuteTime": {
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "af14bea64023a3d4",
    "metadata": {
     "ExecuteTime": {
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "b4fdbd7671405821",
    "metadata": {
     "ExecuteTime": {
@@ -386,19 +386,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "id": "463bc5f7",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "from heapq import heappush, heappop\n",
-    "from collections import defaultdict"
+    "from collections import defaultdict\n",
+    "from tqdm import tqdm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "b1e0270f",
    "metadata": {},
    "outputs": [],
@@ -412,16 +413,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "id": "d70a537a",
    "metadata": {},
    "outputs": [],
    "source": [
     "class HNSW_Index:\n",
-    "    def __init__(self, dimension, max_level, num_neigh):\n",
+    "    def __init__(self, dimension, max_level, min_num_neigh, ef_construction):\n",
     "        self.dimension = dimension\n",
     "        self.max_level = max_level\n",
-    "        self.num_neigh = num_neigh\n",
+    "        self.min_num_neigh = min_num_neigh\n",
+    "        self.ef_construction = ef_construction\n",
     "        self.nodes = []\n",
     "        self.start_node = None\n",
     "\n",
@@ -436,13 +438,17 @@
     "            self.nodes.append(new_node)\n",
     "        \n",
     "        else:\n",
+    "            self.entry_point.neighbors[self.max_level].append(new_node)\n",
+    "\n",
     "            entry_point = self.entry_point\n",
     "            for level in range(self.max_level, new_node.level, -1): # from highest to node level\n",
-    "                print(entry_point.neighbors[level])\n",
-    "                entry_point = min(entry_point.neighbors[level], key=lambda n: self.distance(vector, n.vector))\n",
+    "                if len(entry_point.neighbors[level]) > self.min_num_neigh:\n",
+    "                    entry_point = min(entry_point.neighbors[level], key=lambda n: self.distance(vector, n.vector))\n",
+    "                else:\n",
+    "                    entry_point.neighbors[level].append(new_node)\n",
     "\n",
     "            for level in range(min(new_node.level, self.max_level)):\n",
-    "                candidates = self.search_layer(vector, entry_point, level, self.num_neigh)\n",
+    "                candidates = self.search_layer(vector, entry_point, level, self.min_num_neigh)\n",
     "                for candidate in candidates:\n",
     "                    candidate.neighbors[level].append(new_node)\n",
     "                    new_node.neighbors[level].append(candidate)\n",
@@ -452,7 +458,7 @@
     "                self.entry_point = new_node\n",
     "\n",
     "    def add(self, vectors):\n",
-    "        for vector in vectors:\n",
+    "        for vector in tqdm(vectors):\n",
     "            self.add_single(vector)\n",
     "\n",
     "    def search_layer(self, query, entry_point, level, entry_factor):\n",
@@ -498,45 +504,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "6ed0d20b",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[]\n"
+      "  0%|          | 0/20000 [00:00<?, ?it/s]"
      ]
     },
     {
-     "ename": "ValueError",
-     "evalue": "min() iterable argument is empty",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[19], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m hnsw \u001b[38;5;241m=\u001b[39m HNSW_Index(dimension\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m128\u001b[39m, max_level\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m16\u001b[39m, num_neigh\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m200\u001b[39m)\n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m# Add index vectors to the graph\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m \u001b[43mhnsw\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43madd\u001b[49m\u001b[43m(\u001b[49m\u001b[43mindex_vectors\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[0;32mIn[17], line 38\u001b[0m, in \u001b[0;36mHNSW_Index.add\u001b[0;34m(self, vectors)\u001b[0m\n\u001b[1;32m     36\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21madd\u001b[39m(\u001b[38;5;28mself\u001b[39m, vectors):\n\u001b[1;32m     37\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m vector \u001b[38;5;129;01min\u001b[39;00m vectors:\n\u001b[0;32m---> 38\u001b[0m         \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43madd_single\u001b[49m\u001b[43m(\u001b[49m\u001b[43mvector\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[0;32mIn[17], line 23\u001b[0m, in \u001b[0;36mHNSW_Index.add_single\u001b[0;34m(self, vector)\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m level \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmax_level, new_node\u001b[38;5;241m.\u001b[39mlevel, \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m): \u001b[38;5;66;03m# from highest to node level\u001b[39;00m\n\u001b[1;32m     22\u001b[0m     \u001b[38;5;28mprint\u001b[39m(entry_point\u001b[38;5;241m.\u001b[39mneighbors[level])\n\u001b[0;32m---> 23\u001b[0m     entry_point \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mmin\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mentry_point\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mneighbors\u001b[49m\u001b[43m[\u001b[49m\u001b[43mlevel\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mkey\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mlambda\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mn\u001b[49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdistance\u001b[49m\u001b[43m(\u001b[49m\u001b[43mvector\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mn\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mvector\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     25\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m level \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mmin\u001b[39m(new_node\u001b[38;5;241m.\u001b[39mlevel, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmax_level)):\n\u001b[1;32m     26\u001b[0m     candidates \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msearch_layer(vector, entry_point, level, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mnum_neigh)\n",
-      "\u001b[0;31mValueError\u001b[0m: min() iterable argument is empty"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 20000/20000 [06:58<00:00, 47.76it/s]\n"
      ]
     }
    ],
    "source": [
-    "hnsw = HNSW_Index(dimension=128, max_level=16, num_neigh=200)\n",
+    "hnsw = HNSW_Index(dimension=dim, max_level=6, min_num_neigh=4, ef_construction=200)\n",
     "\n",
     "# Add index vectors to the graph\n",
-    "hnsw.add(index_vectors)\n",
-    "\n"
+    "hnsw.add(index_vectors)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "b8d39ceb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'HNSW_Index' object has no attribute 'ef_construction'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[25], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m ann \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m query \u001b[38;5;129;01min\u001b[39;00m query_vectors:\n\u001b[0;32m----> 4\u001b[0m     ann\u001b[38;5;241m.\u001b[39mappend([node\u001b[38;5;241m.\u001b[39mvector \u001b[38;5;28;01mfor\u001b[39;00m node \u001b[38;5;129;01min\u001b[39;00m \u001b[43mhnsw\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msearch\u001b[49m\u001b[43m(\u001b[49m\u001b[43mquery\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mk\u001b[49m\u001b[43m)\u001b[49m])\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrecall@10 for hnsw_index: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcompute_recall_at_k(gt_nn,\u001b[38;5;250m \u001b[39mnp\u001b[38;5;241m.\u001b[39marray(ann),\u001b[38;5;250m \u001b[39mk)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
+      "Cell \u001b[0;32mIn[19], line 74\u001b[0m, in \u001b[0;36mHNSW_Index.search\u001b[0;34m(self, query, k)\u001b[0m\n\u001b[1;32m     73\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21msearch\u001b[39m(\u001b[38;5;28mself\u001b[39m, query, k):\n\u001b[0;32m---> 74\u001b[0m     entry_factor \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mmax\u001b[39m(k, \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mef_construction\u001b[49m)\n\u001b[1;32m     75\u001b[0m     entry_point \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mentry_point\n\u001b[1;32m     77\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m level \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmax_level, \u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m):\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'HNSW_Index' object has no attribute 'ef_construction'"
+     ]
+    }
+   ],
    "source": [
     "# Search for the nearest neighbors of the query vectors\n",
     "ann = []\n",
