--- a/Part 2.ipynb
+++ b/Part 2.ipynb
@@ -357,7 +357,8 @@
     "    def __init__(self, min_clusters=7, max_clusters=15):\n",
     "        # Initialize the PCA_Kmeans class with the min_clusters and max_clusters\n",
     "        \"\"\"\n",
-    "        This function initializes the PCA_Kmeans class.\n",
+    "        This function initializes the PCA_Kmeans class. \n",
+    "        This class will perform PCA to reduce the dimensionality of the index vectors, and then use KMeans to cluster the reduced vectors.\n",
     "        Args:\n",
     "            min_clusters: The minimum number of clusters to consider.\n",
     "            max_clusters: The maximum number of clusters to consider.            \n",
